# EasyEmbeddedFramework-Pico-Integration

./: .gitmodules  CMakeLists.txt  README.md
configs/: FreeRTOSConfig.h  features.cmake
src/: main.c
